# swagger.json
@@ -98,6 +98,55 @@
 				}
 			}
 		},
+		"/users/refresh": {
+			"get": {
+				"tags": ["Auth"],
+				"summary": "User refresh",
+				"parameters": [],
+				"security": [{ "Bearer": [] }],
+				"responses": {
+					"200": {
+						"description": "successfully login",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"token": {
+											"type": "string",
+											"example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjY2NGIzNWI2MDA4MGFkNWY1ZmViZDVhMiIsImlhdCI6MTcxNjM4NDg5MCwiZXhwIjoxNzE2NDI4MDkwfQ.dI4QYUK9onyX6k8nqQoMMIlIePXN5kZr4M5nigrBwng"
+										},
+										"user": {
+											"type": "object",
+											"properties": {
+												"id": {
+													"type": "string",
+													"example": "65cb32121b768ed2b321e4ea"
+												},
+												"name": {
+													"type": "string",
+													"example": "Eduard"
+												},
+												"email": {
+													"type": "string",
+													"example": "admin@gmail.com"
+												}
+											}
+										}
+									}
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				}
+			}
+		},
 		"/users/logout": {
 			"get": {
 				"tags": ["Auth"],
